--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -1,13 +1,13 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET CI
+name: Build and Test
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, stage, develop]
   pull_request:
-    branches: [main, develop]
+    branches: [main, stage, develop]
     types: [opened, synchronize, reopened]
 
 jobs:
