--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -6,9 +6,13 @@ name: Build and Test
 on:
   push:
     branches: [main, stage, develop]
+    paths-ignore:
+      - "README.md"
   pull_request:
     branches: [main, stage, develop]
     types: [opened, synchronize, reopened]
+    paths-ignore:
+      - "README.md"
 
 jobs:
   build:
@@ -36,3 +40,10 @@ jobs:
       # - name: Test
       #   run: dotnet test --no-build --verbosity normal
       #   working-directory: FoodManagerTest
+
+      - name: "Upload Artifact"
+        uses: actions/upload-artifact@v3
+        with:
+          name: Builds
+          path: build-$GITHUB_RUN_NUMBER.txt
+          retention-days: 7
