--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -41,11 +41,12 @@ jobs:
       #   run: dotnet test --no-build --verbosity normal
       #   working-directory: FoodManagerTest
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ../FoodManager-Backend/FoodManager-Backend/FoodManagerApi/
+      # - name: dotnet publish
+      #   run: dotnet publish -c Release -o /home/runner/work/FoodManager-Backend/FoodManager-Backend/FoodManagerApi/
+      #   working-directory: FoodManagerApi
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: Artifact-$GITHUB_RUN_NUMBER
-          path: /home/runner/work/FoodManager-Backend/FoodManager-Backend/FoodManagerApi/FoodManagerApi/bin/Release/
+          path: /home/runner/work/FoodManager-Backend/FoodManager-Backend/
