--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -42,11 +42,11 @@ jobs:
       #   working-directory: FoodManagerTest
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Build_Artifact
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}\Build_Artifact
         working-directory: FoodManagerApi
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: Artifact-$GITHUB_RUN_NUMBER
-          path: ${{env.DOTNET_ROOT}}/Build_Artifact
+          path: ${{env.DOTNET_ROOT}}\Build_Artifact
