--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Build and Test
+name: .NET CI
 
 on:
   push:
@@ -15,9 +15,9 @@ on:
       - "README.md"
 
 jobs:
-  build-and-test-ubuntu:
-    runs-on: ubuntu-latest
 
+  build-and-test-Linux:
+    runs-on: ubuntu-latest
     steps:
       - name: Clone FoodManager-Backend repository
         uses: actions/checkout@v3
@@ -34,7 +34,7 @@ jobs:
         working-directory: FoodManagerApi
 
       - name: Build
-        run: dotnet build --configuration Release
+        run: dotnet build --no-restore --configuration Release
         working-directory: FoodManagerApi
 
       # - name: Test
@@ -50,3 +50,38 @@ jobs:
         with:
           name: Artifact-${{ runner.os }}_${{ runner.arch }}-${{ github.sha }}
           path: ${{env.DOTNET_ROOT}}/Build_Artifact
+
+  build-and-test-WINDOWS:
+    runs-on: windows-latest
+    steps:
+      - name: Clone FoodManager-Backend repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup .NET 6
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 6.0.x
+
+      - name: Restore dependencies
+        run: dotnet restore --interactive
+        working-directory: FoodManagerApi
+
+      - name: Build
+        run: dotnet build --no-restore --configuration Release
+        working-directory: FoodManagerApi
+
+      # - name: Test
+      #   run: dotnet test --no-build --verbosity normal
+      #   working-directory: FoodManagerTest
+
+      - name: dotnet publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}\Build_Artifact
+        working-directory: FoodManagerApi
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: Artifact-${{ runner.os }}_${{ runner.arch }}-${{ github.sha }}
+          path: ${{env.DOTNET_ROOT}}\Build_Artifact
