--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -41,47 +41,22 @@ jobs:
       #   run: dotnet test --no-build --verbosity normal
       #   working-directory: FoodManagerTest
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Build_Artifact -r win10-x64 --self-contained true
+      - name: Publish build artifact (Linux)
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Build_Linux -r linux-x64 --self-contained false
         working-directory: FoodManagerApi
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact (Linux)
         uses: actions/upload-artifact@v3
         with:
-          name: Artifact-${{ runner.os }}_${{ runner.arch }}-#${{ github.run_number }}-${{ github.sha }}
-          path: ${{env.DOTNET_ROOT}}/Build_Artifact
+          name: Linux-artifact-#${{ github.run_number }}-${{ github.sha }}
+          path: ${{env.DOTNET_ROOT}}/Build_Linux
 
-  # build-and-test-WINDOWS:
-  #   runs-on: windows-latest
-  #   steps:
-  #     - name: Clone FoodManager-Backend repository
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
+      - name: Publish build artifact (Windows)
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Build_Windows -r win10-x64 --self-contained false
+        working-directory: FoodManagerApi
 
-  #     - name: Setup .NET 6
-  #       uses: actions/setup-dotnet@v3
-  #       with:
-  #         dotnet-version: 6.0.x
-
-  #     - name: Restore dependencies
-  #       run: dotnet restore --interactive
-  #       working-directory: FoodManagerApi
-
-  #     - name: Build
-  #       run: dotnet build --no-restore --configuration Release
-  #       working-directory: FoodManagerApi
-
-  #     # - name: Test
-  #     #   run: dotnet test --no-build --verbosity normal
-  #     #   working-directory: FoodManagerTest
-
-  #     - name: dotnet publish
-  #       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}\Build_Artifact -r win10-x64 --self-contained true
-  #       working-directory: FoodManagerApi
-
-  #     - name: Upload artifact for deployment job
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: Artifact-${{ runner.os }}_${{ runner.arch }}-#${{ github.run_number }}-${{ github.sha }}
-  #         path: ${{env.DOTNET_ROOT}}\Build_Artifact
+      - name: Upload artifact (Windows)
+        uses: actions/upload-artifact@v3
+        with:
+          name: Windows-artifact-#${{ github.run_number }}-${{ github.sha }}
+          path: ${{env.DOTNET_ROOT}}/Build_Windows
