--- a/.github/workflows/dotnet_ci.yaml
+++ b/.github/workflows/dotnet_ci.yaml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET CI
 
 on:
@@ -16,7 +13,7 @@ on:
 
 jobs:
 
-  build-and-test-LINUX:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Clone FoodManager-Backend repository
