--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -26,6 +26,9 @@ jobs:
         with:
           dotnet-version: 6.0.x
 
+      - name: Format code style
+        run: dotnet format --verbosity normal
+
       - name: Restore dependencies
         run: dotnet restore --interactive
         working-directory: FoodManagerApi
