--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter/slim@v4
         env:
+          VALIDATE_ALL_CODEBASE: false
           VALIDATE_CSHARP: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
