--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -21,9 +21,8 @@ jobs:
           fetch-depth: 0
 
       - name: Lint Code Base
-        uses: github/super-linter/slim@v4
+        uses: github/super-linter@v4
         env:
-          VALIDATE_ALL_CODEBASE: false
           VALIDATE_CSHARP: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
