--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -12,9 +12,10 @@ on:
       - "README.md"
 
 jobs:
-
   build-and-test:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Clone FoodManager-Backend repository
         uses: actions/checkout@v3
