--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -15,7 +15,7 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Clone FoodManager-Backend repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
