--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -1,14 +1,18 @@
-name: Docker
+name: Docker Push
 
 on:
-  pull_request:
-    branches: [main, stage, develop]
-    types: [opened, synchronize, reopened]
+  push:
+    branches: [main, stage]
     paths-ignore:
       - "README.md"
+  # pull_request:
+  #   branches: [main, stage, develop]
+  #   types: [opened, synchronize, reopened]
+  #   paths-ignore:
+  #     - "README.md"
 
 jobs:
-  docker:
+  docker-push:
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
@@ -27,4 +31,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend:0.0.2-run_${{ github.run_number }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend:0.0.2-push_${{ github.run_number }}
