--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -16,3 +16,9 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: false
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend:0.0.2-build_${{ github.run_number }}
