--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Clone FoodManager-Backend repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
